--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ application {
 
 dependencies {
     implementation("jakarta.annotation:jakarta.annotation-api:2.1.1")
+    implementation("org.ow2.asm:asm:9.7.1")
     testImplementation(platform("org.junit:junit-bom:5.11.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.11.0")
